# detect

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLEANUP_NOTES.md  CLEANUP_SUMMARY.md  Cargo.toml  ERGONOMICS.md  ERGONOMICS_LOG.md  LICENSE-MIT  MCP.md  NEW_SYNTAX.md  NEXT.md  NEXT_MAYBE.md  README.md  SIMPLE_SYNTAX_GUIDE.md  UX_TEST_SCENARIOS.md  claude_desktop_config.json  test_queries.sh
.claude/agents/: detect-mcp-beta-tester.md  pest-grammar-expert.md  rust-collective-advisor.md  vibes-ergonomics-expert.md
docs/: examples.md  operators.md  predicates.md
proptest-regressions/: proptest_generators.txt
scripts/: test_sigpipe.sh
src/: ast.rs  diagnostics.rs  error.rs  error_hints.rs  eval.rs  eval_viz.rs  expr.rs  file.rs  hybrid_regex.rs  lib.rs  main.rs  matcher.rs  mcp_server.rs  operator.rs  output.rs  parse_error.rs  parser.rs  parser2.rs  parser_tests.rs  predicate.rs  predicate_error.rs  proptest_generators.rs  query.rs  util.rs
src/ast/: mod.rs  operators.rs  parse_helpers.rs  selectors.rs  typed_predicate.rs  values.rs
src/docs/: examples.md  expr_guide.md  mcp_advanced.md  mcp_basic.md  operators.md  predicates.md
src/eval/: fs.rs  git.rs  github.rs  structured.rs
src/expr/: expr.pest  frame.rs  recurse.rs  recursive.rs  short_circuit.rs
src/expr/recurse/: operator.rs
src/parser/: aliases.rs  ast.rs  error.rs  grammar.pest  mod.rs  parser.rs  raw.rs  structured_path.pest  structured_path.rs  time.rs  typechecker.rs  typed.rs
src/predicate/: enum_matcher.rs  mod.rs  process.rs
src/v2_parser/: error.rs  grammar.pest  mod.rs  parser.rs  typechecker.rs  typed.rs
test_ext/: files.txt
tests/: aliases.rs  cli_integration_test.rs  error_handling_tests.rs  integration.rs  llm_syntax_tests.rs  navigation_structured.rs  new_syntax.rs  parser.rs  parser_basic.rs  parser_edge_cases.rs  parser_errors.rs  parser_regex.rs  parser_structured_path.rs  parser_structured_selectors.rs  parser_structured_selectors.rs.backup  parser_tests.rs  pest_parser_tests.rs  sigpipe_test.rs  stress_test_parser.rs  stress_test_v2_parser.rs  structured_integration.rs  temporal_tests.rs  typechecker.rs  v2_parser.rs  v2_typechecker.rs
tests/fixtures/structured/: Cargo.toml  binary.yaml  config.yaml  datetime.toml  deep_nesting.yaml  empty_structures.yaml  floats.toml  floats.yaml  invalid.json  invalid.toml  invalid.yaml  large_config.yaml  multi_doc.yaml  nested_arrays.json  null_boolean_edge_cases.yaml  numeric_edge_cases.json  package.json  type_coercion.yaml  type_mismatch_coercion.toml  unicode_strings.json
tmp/: bug-001-regex-operator.md  bug-002-mcp-docs-visibility.md  bug-002-name-stem-matching.md  bug-003-case-sensitivity.md  bug-004-error-messages.md  usability-test-report.md
