[package]
name = "detect"
description = "Detect files on your filesystem using arbitrary expression language criteria"
license = "MIT OR Apache-2.0"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "detect"
path = "src/main.rs"


[features]
default = ["mcp"]
mcp = ["dep:serde", "dep:serde_json", "dep:env_logger", "dep:log"]

[dependencies]
anyhow = "1"
clap = {version = "4.4", features = ["derive"]}
futures = "0.3.23"
globset = "0.4"
ignore = "0.4"
itertools = "0.10"
pcre2 = "0.2"
pest = "2.7.15"
pest_derive = "2.7.15"
pest-ast = "0.3.5"
from-pest = "0.3.1"
recursion = {version = "0.5", features = ["experimental"]}
regex = "1.6.0"
regex-automata = "0.4.7"
slog-term = "2.9"
slog = "2.7"
tokio = {version = "1.19", features = ["rt", "rt-multi-thread", "fs", "macros"]}
tokio-util = {version ="0.7.11", features = ["io"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
env_logger = { version = "0.11", optional = true }
log = { version = "0.4", optional = true }
chrono = "0.4"
thiserror = "1.0"
miette = { version = "7.6.0", features = ["fancy"] }

[dev-dependencies]
tempdir = "0.3.7"
