[package]
name = "detect"
version = "0.3.0"
edition = "2021"
authors = ["Test Author <test@example.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"

[features]
default = ["mcp"]
mcp = []
